JWT Token Added

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=OQ0Y8P0EAT6UW;Database=DepartmentalStoreDB;User Id=sa; Password=!Morning1;MultipleActiveResultSets=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "http://localhost:64368",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  }
 }
